// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput.vue renders OXD Radio Input 1`] = `
<div class="oxd-radio-wrapper"><label class="">
    <!--v-if--><input label="Radio" type="radio"><span class="oxd-radio-input oxd-radio-input--active --label-right oxd-radio-input"></span>
  </label></div>
`;

exports[`RadioInput.vue should renders OXD Radio input with error 1`] = `
<div class="oxd-radio-wrapper"><label class="">
    <!--v-if--><input label="Radio" type="radio"><span class="oxd-radio-input oxd-radio-input--active oxd-radio-input--error --label-right oxd-radio-input"></span>
  </label></div>
`;
